--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -7,7 +7,7 @@
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
-      {{ .Summary  }}
+      {{ .Params.summary | default .Summary }}
     </div>
   </div>
 </div>
